--- a/style.css
+++ b/style.css
@@ -2,3 +2,13 @@
     width: 100px;
     height: auto;
 }
+
+.small {
+    width: 400px;
+    height: auto;
+}
+
+.smaller {
+    width: 250px;
+    height: 250px;
+}
