--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ a {
 
 .thumb {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     padding: 30px;
     gap: 40px;
 }
@@ -69,7 +69,7 @@ a {
 .info-button {
     display: flex;
     flex-direction: column;
-    max-width: 400px;
+    max-width: 500px;
 }
 
 h2 {
@@ -82,4 +82,15 @@ h2 {
 .desc {
     font-size: 18px;
     color: #E5E7EB;
+}
+
+button {
+  background-color: #3882F6;
+  color: white;
+  font-weight: bold;
+  width: 90px;
+  height: 30px;
+  border-radius: 5px;
+  border: none;
+  padding: 10 40px;
 }
