--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Roboto' , sans-serif;
-    color: white;
+    color: black;
 }
 
 .between {
@@ -14,6 +14,7 @@ body {
 .header {
     display: flex;
     justify-content: space-around;
+    color: white;
 }
 
 .logo img {
@@ -44,10 +45,7 @@ a {
     color: gret;
 }
 
-.abraham {
-    background-color: #E5E7EB;
-    font-size: 36px;
-}
+
 
 .info {
     font-size: 26px;
@@ -113,4 +111,24 @@ button {
 
 .text {
     color: grey;
+}
+
+.abraham-quote {
+    background-color: #E5E7EB;
+    font-size: 34px;
+    color: #1F2937;
+    padding: 150px 200px;
+}
+
+.quote {
+    color:grey;
+    font-weight: 50;
+    opacity: 8;  
+
+}
+
+.lincoln {
+    padding-left: 400px;
+    font-size: 20px;
+    font-weight: bold;
 }
