--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ ul {
 }
 
 a {
-    color: gret;
+    color: grey;
+    text-decoration: none;
 }
 
 
@@ -132,3 +133,4 @@ button {
     font-size: 20px;
     font-weight: bold;
 }
+
