--- a/style.css
+++ b/style.css
@@ -89,8 +89,6 @@ h2 {
 }
 
 button {
-  background-color: #3882F6;
-  color: white;
   font-weight: bold;
   width: 90px;
   height: 30px;
@@ -134,3 +132,31 @@ button {
     font-weight: bold;
 }
 
+.call, button {
+    background-color: #3882F6;
+    color: white;
+}
+
+.call {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 900px;
+    height: 100px;
+   margin: 50px auto;
+   border-radius: 20px;
+}
+
+.cmon {
+    font-size: 18px;
+    margin-bottom: -10px;
+    font-weight: bold;
+}
+
+.click {
+    color: rgb(230, 224, 224);
+}
+
+.call button {
+    border: 2px solid white;
+}
