--- a/style.css
+++ b/style.css
@@ -160,3 +160,12 @@ button {
 .call button {
     border: 2px solid white;
 }
+
+.footer {
+    height:100px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
